@@ -36,7 +36,7 @@ for var in GPG_PASSPHRASE ASF_USERID ASF_PASSWORD; do
   fi
 done
 
-export MAVEN_OPTS="-Xmx2g -XX:MaxPermSize=512m"
+export MAVEN_OPTS="-Xmx2g -XX:MaxMetaspaceSize=512m"
 RED='\033[0;31m'
 NC='\033[0m' # No Color
 
@@ -46,8 +46,8 @@ if [[ $RELEASE_VERSION == *"SNAPSHOT"* ]]; then
   DO_SNAPSHOT="yes"
 fi
 
-PUBLISH_PROFILES="-Ppublish-distr -Phadoop-2.6 -Pr"
-PROJECT_OPTIONS="-pl !zeppelin-distribution"
+PUBLISH_PROFILES="-Ppublish-distr -Phadoop-2.6 -Pweb-angular"
+PROJECT_OPTIONS="-pl !zeppelin-distribution -Dmaven.javadoc.skip=true"
 NEXUS_STAGING="https://repository.apache.org/service/local/staging"
 NEXUS_PROFILE="153446d1ac37c4"
 
@@ -127,27 +127,13 @@ function publish_to_maven() {
 
   rm -rf $HOME/.m2/repository/org/apache/zeppelin
 
-  # build with scala-2.10
-  echo "mvn clean install -DskipTests \
-    -Pscala-2.10 -Pbeam \
-    ${PUBLISH_PROFILES} ${PROJECT_OPTIONS}"
-  mvn clean install -DskipTests -Pscala-2.10 -Pbeam \
-    ${PUBLISH_PROFILES} ${PROJECT_OPTIONS}
-  if [[ $? -ne 0 ]]; then
-    echo "Build with scala 2.10 failed."
-    exit 1
-  fi
-
   # build with scala-2.11
-  "${BASEDIR}/change_scala_version.sh" 2.11
-
   echo "mvn clean install -DskipTests \
-    -Pscala-2.11 \
     ${PUBLISH_PROFILES} ${PROJECT_OPTIONS}"
-  mvn clean install -DskipTests -Pscala-2.11 \
+  mvn clean install -DskipTests \
     ${PUBLISH_PROFILES} ${PROJECT_OPTIONS}
   if [[ $? -ne 0 ]]; then
-    echo "Build with scala 2.11 failed."
+    echo "Build failed."
     exit 1
   fi
 
